@@ -2,99 +2,115 @@ package minimals;
 
 public class Whiz {
 
-    //static int i = 2;
+    // static int i = 2;
     // public static void main(String[] args) {
-    //     int array[] = new int[i];
-    //     array[1] = 66;
-    //     array[2] = 67;
-    //     System.out.print(array[1]);
+    // int array[] = new int[i];
+    // array[1] = 66;
+    // array[2] = 67;
+    // System.out.print(array[1]);
     // }
     // public static void main(String[] args) {
-    //     List<String> ints = new ArrayList<>();
-    //     ints.add("a");
-    //     ints.add("b");
-    //     ints.add("c");
-    //     while(!ints.isEmpty()){System.out.print(ints.remove(0));}
+    // List<String> ints = new ArrayList<>();
+    // ints.add("a");
+    // ints.add("b");
+    // ints.add("c");
+    // while(!ints.isEmpty()){System.out.print(ints.remove(0));}
     // }
     // public static void main(String[] args) {
-    //     for (int x = 10; x>5; x++){
-    //         if(x == 16) x-=11;
-    //         System.out.print(x+" ");
-    //     }
+    // for (int x = 10; x>5; x++){
+    // if(x == 16) x-=11;
+    // System.out.print(x+" ");
+    // }
     // }
     // public static void main(String[] args) {
-    //     final int x;
-    //     x = 0;
-    //     final int y = 2;
-    //     int i = (int) (Math.random() * 4);
-    //     switch (i) {
-    //         case x: {
-    //             System.out.print("A");
-    //         }
-    //         break;
-    //         case 1:
-    //             System.out.print("B");
-    //         case 4:
-    //             System.out.print("D");
-    //             break;
-    //         case y:
-    //             System.out.print("C");
-    //     }
+    // final int x;
+    // x = 0;
+    // final int y = 2;
+    // int i = (int) (Math.random() * 4);
+    // switch (i) {
+    // case x: {
+    // System.out.print("A");
+    // }
+    // break;
+    // case 1:
+    // System.out.print("B");
+    // case 4:
+    // System.out.print("D");
+    // break;
+    // case y:
+    // System.out.print("C");
+    // }
     // }
     // public static void main(String[] args) {
-    //     System.out.println("x+y = "+(9+3)+" ");
+    // System.out.println("x+y = "+(9+3)+" ");
     // }
     // class Sup {
-    //     public void method() {
-    //         System.out.println("sup");
-    //     }
+    // public void method() {
+    // System.out.println("sup");
+    // }
     // }
     // // class Sub extends Sup {
-    // //     public void method(int i) {
-    // //         System.out.println(i);
-    // //     }
+    // // public void method(int i) {
+    // // System.out.println(i);
+    // // }
     // // }
     // // Sub sub = new Sub();
     // Sup sup = new Sup();
     // // sub.method();
     // sup.method();
     // public static void main(String[] args) {
-    //     Integer i1 = Integer.decode("10");
-    //     @SuppressWarnings("removal")
-    //     Integer i2 = new Integer("20");
-    //     Integer i3 = Integer.valueOf("30");
-    //     System.out.println(i1 + i2 +i3);
+    // Integer i1 = Integer.decode("10");
+    // @SuppressWarnings("removal")
+    // Integer i2 = new Integer("20");
+    // Integer i3 = Integer.valueOf("30");
+    // System.out.println(i1 + i2 +i3);
     // }
     // public static void main(String[] args) {
-    //     A ab = new B();
-    //     System.out.println(ab.x);
+    // A ab = new B();
+    // System.out.println(ab.x);
     // // }
     // public static void main(String[] args) {
-    //     s = "Whiz:";
-    //     System.out.println(s);
-    //     System.out.println(A.x);
+    // s = "Whiz:";
+    // System.out.println(s);
+    // System.out.println(A.x);
     // // }
-    
+
     // public static void main(String[] args) {
-    //     char c ='A';
-    //     System.out.println(aval(c));
-        
+    // char c ='A';
+    // System.out.println(aval(c));
+
     // }
     // private static int aval(char c) {
-    //     int x = c;
-    //     return x;
+    // int x = c;
+    // return x;
     // }
-
+    public static void main(String[] args) {
+        String str1 = "Java";
+        String str2 = new String("Java");
+        System.out.println(str2);
+        System.out.println(str1.hashCode());
+        System.out.println(str2.hashCode());
+        System.out.println(1000+2000+3000+"Java");
+        System.out.println("JAVAJ2EE".substring(2, 5).substring(1));
+        String str = "Java Concept Of The Day";         
+        System.out.println(str.indexOf('a') +" " + str.indexOf("Day"));
+                 
+        System.out.println(str.replace("a", "A").lastIndexOf('a'));
+        StringBuilder sb = new StringBuilder(32);         
+        sb.append("ABC");         
+        System.out.println(sb);
+        String strr2 = "     ";         
+        System.out.println(strr2.isBlank());
+    }
 
 }
 
-
-// class A{protected  int x =10;
+// class A{protected int x =10;
 // static int j = 21;}
 // class B extends A{}
 
 // interface A {
 
-//     static int x = 10;
-//     String s = "Value: ";
+// static int x = 10;
+// String s = "Value: ";
 // }
